# full-team

./: .gitignore  README.md
.github/workflows/: deploy-ecr.yaml  deploy.yaml
.kiro/steering/: best-practices.md  product.md  structure.md  tech.md
backend/: pyproject.toml  requirements.txt  samconfig-ecr.yaml  samconfig.yaml  template-ecr.yaml  template.yaml
backend/agents/boilerplate/: Dockerfile  pyproject.toml
backend/src/agents/boilerplate/: agent.py  requirements.txt
backend/src/agents/boilerplate/tests/: test_agent.py
