[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "health-agents"
version = "1.0.0"
description = "Multi-agent health management system"
requires-python = ">=3.11"
dependencies = [
    "strands-agents>=1.0.0",
    "boto3>=1.34.0",
    "bedrock-agentcore>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
testpaths = ["src/agents"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/agents --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["src/agents"]
omit = ["*/tests/*", "*/test_*"]